kubernetes/paperless/paperless.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: paperless
  labels:
    app: paperless
spec:
  replicas: 1
  selector:
    matchLabels:
      app: paperless
  template:
    metadata:
      labels:
        app: paperless
    spec:
      containers:
        - name: paperless
          image: ghcr.io/paperless-ngx/paperless-ngx:2.15.1
          ports:
            - containerPort: 8000
          volumeMounts:
            - name: paperless-storage
              mountPath: /usr/src/paperless/data
              subPath: data

            - name: paperless-storage
              mountPath: /usr/src/paperless/media
              subPath: media

            - name: paperless-storage
              mountPath: /usr/src/paperless/export
              subPath: export

            - name: paperless-storage
              mountPath: /usr/src/paperless/consume
              subPath: consume

      volumes:
        - name: paperless-storage
          persistentVolumeClaim:
            claimName: paperless-pvc

---
apiVersion: v1
kind: Service
metadata:
  name: paperless
spec:
  selector:
    app: paperless
  ports:
    - protocol: TCP
      name: api
      port: 80
      targetPort: 8000
