kubernetes/paperless/ingress.yaml
apiVersion: traefik.io/v1alpha1
kind: IngressRoute
metadata:
  name: paperless
spec:
  entryPoints:
    - websecure
  routes:
    - match: Host(`paperless.skippythesnake.com`)
      kind: Rule
      services:
        - name: paperless
          port: 80
